--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <img src="https://images.unsplash.com/photo-1724988170637-82f064012675?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <img src="https://plus.unsplash.com/premium_photo-1732835069844-3b6003086630?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <!-- <img src="https://images.unsplash.com/photo-1687333621846-01628cae8300?q=80&w=764&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> -->
-                 <img src="img3.jpg" alt="">
+                 <img src="img3.webp" alt="">
             </div>
 
         </div>
